# hamilton-county-homes-scraper-main

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_AddressEnricher.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: backfill-scraper.yaml  daily-scraper-job.yaml  load-cagis-zip-codes.yaml  load-parcel_polygons-incremental.yaml  load-school-districts.yaml
docs/: architecture.md  create_school_districts_clean_post_gis.md  load_ohio_school_district_shapefiles_into_supabase_post_gis.md  parcel_polygons_incremental_loader_runbook.md  parcel_polygons_load.md  parcel_sales_to_school_district_mapping_post_gis.md  zip_codes_loader_scheduler_runbook.md
notebooks/: Dataset Prep.ipynb  GoldData.csv  GoldDataPreChange.csv  Historical Data Prep.ipynb  Parcels Data Prep.ipynb  Street Spelling Correction Test.ipynb
scripts/: load_parcels_geojson.py  run_scraper.sh
src/hch_scraper/: __main__.py  driver_setup.py  geocoding.py  main.py  scraper.py
src/hch_scraper/config/: mappings.py  settings.py  translations.py  xpaths.yaml
src/hch_scraper/drivers/: selenium.py  webdrivers.py
src/hch_scraper/io/: downloads.py  ingestion.py  navigation.py  supabase_client.py
src/hch_scraper/loaders/: load_parcel_polygons.sh  load_parcel_polygons_incremental.sh  load_school_districts.sh  load_zip_codes.sh  supabase_loader.py
src/hch_scraper/pipelines/: daily_scraper.py  fetch_missing_data.py  scrape.py  (+1 more)
tests/: test_address_cleaners_unit.py  test_date_ranges.py  test_datetime_utils.py
tests/data_extraction/: test_address_cleaners.py
(+21 files in other folders)
